# playground

./: .gitignore  Dockerfile  README.md  github_actins.yml  hello.go  hello.jsx  hello.py  hello.rb  hello.sh  helloReact.html  pom.xml
ai-playground/gemini-jupyter-notebook/: README.md  beginner_notebook.ipynb  pyproject.toml
feisolution/: README.md  pom.xml
gcpLabs/: configHA-VPN.sh
javaDemo/: pom.xml
javaPlayground/: .gitignore  README.md  pom.xml
jupyterLab/: demo_notebook_by_TRAE.ipynb
python/: README.md  streamlit_demo.py
python/fastAPIDemo/: README.md  pyproject.toml
python/fastAPIDemo/app/: main.py
python/fastAPIDemo/app/api/: router.py
python/fastAPIDemo/app/api/routes/: ai_service.py  login_service.py  mcp_service.py  openapi_service.py  output_app_runner_service.py  output_exe_builder_service.py  output_jupyter_service.py  output_streamlit_service.py  root.py
python/fastAPIDemo/app/core/: config.py  errors.py  exception_handlers.py  http_response.py  response.py
python/fastAPIDemo/app/schemas/: dtos.py  http_resp_dto.py
python/fastAPIDemo/app/utils/: common.py
python/fastAPIDemo/public_web_files/: index.html
python/streamlitDemo/: README.md  fastapi_launcher.py  pyproject.toml  requirements.txt  streamlit_mini_apps_hub_home.py
python/streamlitDemo/miniApps/: streamlit_demo.py  streamlit_random_chart.py  yearly_jira_tickets_checker.py
reactApp/: App.jsx  index.html  package-lock.json  package.json
rust/: README.md  demo-by-trae.rs  onboarding.rs
skills/: README.md
springBootDemo/: pom.xml
springboot-activiti/: pom.xml
(+759 files in other folders)
