[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-demo"
version = "0.0.1"
description = "FastAPI demo app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.24"]

[tool.setuptools.packages.find]
include = ["app*"]
