[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.3",
    "fastapi>=0.110.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.20",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "streamlit>=1.38",
    "uvicorn>=0.29.0",
    "watchdog>=4.0",
]
